<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:background="@drawable/background"
        >
    <LinearLayout
            android:id="@+id/create_pin_llWelcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_margin="@dimen/_15dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textStyle="bold"
                style="@style/title_style_text"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_create_pin"
                style="@style/normal_style_text"
                />

    </LinearLayout>
    <LinearLayout
            android:id="@+id/create_pin_llPIN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10dp">
        <EditText
                android:id="@+id/create_pin_edtPIN1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/_80dp"
                android:background="@color/White"
                android:gravity="center"
                android:textSize="@dimen/_30dp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:maxLength="1"
                />
        <EditText
                android:id="@+id/create_pin_edtPIN2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/_80dp"
                android:background="@color/White"
                android:layout_marginLeft="@dimen/_10dp"
                android:gravity="center"
                android:textSize="@dimen/_30dp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:maxLength="1"/>
        <EditText
                android:id="@+id/create_pin_edtPIN3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/_80dp"
                android:background="@color/White"
                android:layout_marginLeft="@dimen/_10dp"
                android:gravity="center"
                android:textSize="@dimen/_30dp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:maxLength="1"/>
        <EditText
                android:id="@+id/create_pin_edtPIN4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/_80dp"
                android:background="@color/White"
                android:layout_marginLeft="@dimen/_10dp"
                android:gravity="center"
                android:textSize="@dimen/_30dp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:maxLength="1"/>
    </LinearLayout>
    <Button
            android:id="@+id/create_pin_btContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_create_pin"
            android:minWidth="@dimen/_120dp"
            android:layout_marginBottom="@dimen/_30dp"
            />

</LinearLayout>